added: get payment history
